--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -53,7 +53,7 @@
                             </div>
                         </div>
                         <div class="block-first__btn">
-                            <a href="javascript:;" class="btn-first" data-fancybox data-src="#windowTwo">Пройти опрос и узнать стоимость</a>
+                            <a href="#windowTwo" class="btn-first" data-fslightbox="window1">Пройти опрос и узнать стоимость</a>
                         </div>
                         <div class="block-first__comm">
                             Ответьте на 5 простых вопросов и узнайте, сколько будет стоить кроватка, которую вы хотите
@@ -163,7 +163,7 @@
                         <div class="block-download__block">
                             <div class="h2 text-white">Скачайте каталог</div>
                             <div class="block-download__text">С полным описанием моделей, размерами и стоимостью кроваток</div>
-                            <a href="javascript:;" class="block-download__link" data-fancybox data-src="#windowOne">Скачать каталог</a>
+                            <a href="#windowOne" class="block-download__link" data-fslightbox="window2">Скачать каталог</a>
                         </div>
                     </div>
                 </div>
@@ -237,7 +237,7 @@
                                     <br><br>
                                     А мы воплотим вашу мечту в жизнь!
                                 </div>
-                                <a href="javascript:;" class="btn-first" data-fancybox data-src="#windowOne">
+                                <a href="#windowOne" class="btn-first" data-fslightbox="window3">
                                     Оставить заявку на <span class="d-none d-sm-inline-block">индивидуальный</span> расчет
                                 </a>
                             </div>
@@ -341,7 +341,7 @@
                                 <div class="block-poll__text">
                                     Узнайте какая кроватка подходит Вашему ребёнку и получите в подарок классные светильники
                                 </div>
-                                <a href="javascript:;" class="btn-first" data-fancybox data-src="#windowTwo">
+                                <a href="#windowTwo" class="btn-first" data-fslightbox="window4">
                                     <span class="d-none d-lg-inline-block">Пройти опрос и получить подарок</span>
                                     <span class="d-lg-none">Получить подарок</span>
                                 </a>
@@ -411,7 +411,7 @@
                                 <div class="block-map">
                                     <div class="block-map__map" id="map"></div>
                                     <div class="block-map__btn">
-                                        <a href="javascript:;" class="btn-second" data-fancybox data-src="#windowOne">Оставить заявку на просмотр шоу-рума</a>
+                                        <a href="#windowOne" class="btn-second" data-fslightbox="window5">Оставить заявку на просмотр шоу-рума</a>
                                     </div>
                                 </div>
                             </div>
