--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,6 +4,7 @@
 @import "./grid";
 @import "./elem";
 @import "~swiper/src/swiper";
-@import "./fslightbox.scss";
+@import "./fslightbox";
+@import "./fslightbox.theme";
 @import "./page";
 @import "./window";
