Добавлена команда + выкладка на хостинг

--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -453,7 +453,7 @@
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide team-slider__slide">
                                             <div class="team-slider__img">
-                                                <img src="local/img/team.jpg" alt="">
+                                                <img src="local/uploads/team.1.jpg" alt="">
                                             </div>
                                             <div class="team-slider__info">
                                                 <div class="team-slider__name">
@@ -468,7 +468,7 @@
                                         </div>
                                         <div class="swiper-slide team-slider__slide">
                                             <div class="team-slider__img">
-                                                <img src="local/img/team.jpg" alt="">
+                                                <img src="local/uploads/team.2.jpg" alt="">
                                             </div>
                                             <div class="team-slider__info">
                                                 <div class="team-slider__name">
@@ -483,7 +483,52 @@
                                         </div>
                                         <div class="swiper-slide team-slider__slide">
                                             <div class="team-slider__img">
-                                                <img src="local/img/team.jpg" alt="">
+                                                <img src="local/uploads/team.3.jpg" alt="">
+                                            </div>
+                                            <div class="team-slider__info">
+                                                <div class="team-slider__name">
+                                                    Артур Ильнурович<br>
+                                                    Основатель "Амалфи"
+                                                </div>
+                                                <hr class="team-slider__line">
+                                                <div class="team-slider__text">
+                                                    Воодушевился этим названием, когда отдыхал на морском побережье в Италии и увидел прекрасный город Amalfi
+                                                </div>
+                                            </div>
+                                        </div>
+                                       <div class="swiper-slide team-slider__slide">
+                                            <div class="team-slider__img">
+                                                <img src="local/uploads/team.4.jpg" alt="">
+                                            </div>
+                                            <div class="team-slider__info">
+                                                <div class="team-slider__name">
+                                                    Артур Ильнурович<br>
+                                                    Основатель "Амалфи"
+                                                </div>
+                                                <hr class="team-slider__line">
+                                                <div class="team-slider__text">
+                                                    Воодушевился этим названием, когда отдыхал на морском побережье в Италии и увидел прекрасный город Amalfi
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="swiper-slide team-slider__slide">
+                                            <div class="team-slider__img">
+                                                <img src="local/uploads/team.5.jpg" alt="">
+                                            </div>
+                                            <div class="team-slider__info">
+                                                <div class="team-slider__name">
+                                                    Артур Ильнурович<br>
+                                                    Основатель "Амалфи"
+                                                </div>
+                                                <hr class="team-slider__line">
+                                                <div class="team-slider__text">
+                                                    Воодушевился этим названием, когда отдыхал на морском побережье в Италии и увидел прекрасный город Amalfi
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="swiper-slide team-slider__slide">
+                                            <div class="team-slider__img">
+                                                <img src="local/uploads/team.6.jpg" alt="">
                                             </div>
                                             <div class="team-slider__info">
                                                 <div class="team-slider__name">
