Метрика + цени + видео?

--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -605,7 +605,7 @@
                                 <div class="swiper-container">
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide">
-                                            <a href="https://www.instagram.com/p/B0lpcPsAFe0/" class="review-video__img" target="_blank">
+                                            <a href="local/video/video.1.mp4" class="review-video__img" data-fslightbox="html5-demo-videos">
                                                 <img src="local/uploads/review.video.1.jpg" alt="">
                                             </a>
                                         </div>
@@ -983,5 +983,36 @@
         </div>
 
         <script src="//api-maps.yandex.ru/2.1.74/?lang=ru_RU"></script>
+
+        <!-- Yandex.Metrika counter -->
+        <script type="text/javascript" >
+            (function (d, w, c) {
+                (w[c] = w[c] || []).push(function() {
+                    try {
+                        w.yaCounter55197436 = new Ya.Metrika({
+                            id:55197436,
+                            clickmap:true,
+                            trackLinks:true,
+                            accurateTrackBounce:true,
+                            webvisor:true
+                        });
+                    } catch(e) { }
+                });
+
+                var n = d.getElementsByTagName("script")[0],
+                    s = d.createElement("script"),
+                    f = function () { n.parentNode.insertBefore(s, n); };
+                s.type = "text/javascript";
+                s.async = true;
+                s.src = "https://mc.yandex.ru/metrika/watch.js";
+
+                if (w.opera == "[object Opera]") {
+                    d.addEventListener("DOMContentLoaded", f, false);
+                } else { f(); }
+            })(document, window, "yandex_metrika_callbacks");
+        </script>
+        <noscript><div><img src="https://mc.yandex.ru/watch/55197436" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+        <!-- /Yandex.Metrika counter -->
+        
     </body>
 </html>
