Избавились от точек в слайдере + вставили видео с ig

--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -605,29 +605,67 @@
                                 <div class="swiper-container">
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide">
-                                            <a href="local/video/video.1.mp4" class="review-video__img" data-fslightbox="html5-demo-videos">
-                                                <img src="local/uploads/review.video.1.jpg" alt="">
-                                            </a>
+                                            <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/B1I9lPOl65c/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
+												<div style="padding:16px;">
+													<a href="https://www.instagram.com/p/B1I9lPOl65c/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
+														<div style=" display: flex; flex-direction: row; align-items: center;">
+															<div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
+															<div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
+																<div style=" background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; margin-bottom: 6px; width: 100px;"></div>
+																<div style=" background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; width: 60px;"></div>
+															</div>
+														</div>
+														<div style="padding: 19% 0;"></div>
+														<div style="display:block; height:50px; margin:0 auto 12px; width:50px;">
+														</div>
+														<div style="padding-top: 8px;">
+															<div style=" color:#3897f0; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:550; line-height:18px;"> Посмотреть эту публикацию в Instagram</div>
+														</div>
+													</a>
+												</div>
+											</blockquote>
                                         </div>
                                         <div class="swiper-slide">
-                                            <a href="https://www.instagram.com/p/B0Lu4M_gRvU/" class="review-video__img" target="_blank">
-                                                <img src="local/uploads/review.video.2.jpg" alt="">
-                                            </a>
+                                            <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/B1d560tlHUN/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
+												<div style="padding:16px;">
+													<a href="https://www.instagram.com/p/B1I9lPOl65c/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
+														<div style=" display: flex; flex-direction: row; align-items: center;">
+															<div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
+															<div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
+																<div style=" background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; margin-bottom: 6px; width: 100px;"></div>
+																<div style=" background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; width: 60px;"></div>
+															</div>
+														</div>
+														<div style="padding: 19% 0;"></div>
+														<div style="display:block; height:50px; margin:0 auto 12px; width:50px;">
+														</div>
+														<div style="padding-top: 8px;">
+															<div style=" color:#3897f0; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:550; line-height:18px;"> Посмотреть эту публикацию в Instagram</div>
+														</div>
+													</a>
+												</div>
+											</blockquote>
                                         </div>
                                         <div class="swiper-slide">
-                                            <a href="https://www.instagram.com/p/B0bEo35Ay5l/" class="review-video__img" target="_blank">
-                                                <img src="local/uploads/review.video.3.jpg" alt="">
-                                            </a>
-                                        </div>
-                                        <div class="swiper-slide">
-                                            <a href="https://www.instagram.com/p/B00hyF6AuS_/" class="review-video__img" target="_blank">
-                                                <img src="local/uploads/review.video.4.jpg" alt="">
-                                            </a>
-                                        </div>
-                                        <div class="swiper-slide">
-                                            <a href="https://www.instagram.com/p/Bz5E8jrgjd0/" class="review-video__img" target="_blank">
-                                                <img src="local/uploads/review.video.5.jpg" alt="">
-                                            </a>
+                                            <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/B1_W-_TlzxX/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
+												<div style="padding:16px;">
+													<a href="https://www.instagram.com/p/B1I9lPOl65c/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
+														<div style=" display: flex; flex-direction: row; align-items: center;">
+															<div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
+															<div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
+																<div style=" background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; margin-bottom: 6px; width: 100px;"></div>
+																<div style=" background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; width: 60px;"></div>
+															</div>
+														</div>
+														<div style="padding: 19% 0;"></div>
+														<div style="display:block; height:50px; margin:0 auto 12px; width:50px;">
+														</div>
+														<div style="padding-top: 8px;">
+															<div style=" color:#3897f0; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:550; line-height:18px;"> Посмотреть эту публикацию в Instagram</div>
+														</div>
+													</a>
+												</div>
+											</blockquote>
                                         </div>
                                     </div>
                                 </div>
@@ -983,6 +1021,7 @@
         </div>
 
         <script src="//api-maps.yandex.ru/2.1.74/?lang=ru_RU"></script>
+        <script async src="//www.instagram.com/embed.js"></script>
 
         <!-- Yandex.Metrika counter -->
         <script type="text/javascript" >
