--- a/src/scss/page.scss
+++ b/src/scss/page.scss
@@ -697,6 +697,7 @@
     }
     &__price {
         white-space: nowrap;
+        margin: 0 0 0 20px;
     }
     &__str {
         margin: 65px 0 0 230px;
