--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -797,7 +797,7 @@
                         <div class="window-two__form" v-if="!isQuizSend">
                             <form action="/ajax/quiz.php" method="post" @submit.prevent="quizSend">
 
-                                <div class="form-two" v-if="quizStep == 1">
+                                <div class="form-two" v-show="quizStep == 1">
                                     <div class="form-two__count">
                                         <span class="form-two__count-big">1</span> / <span class="form-two__count-small">5</span>
                                     </div>
@@ -806,34 +806,31 @@
                                     </div>
                                     <div class="form-two__line">
                                         <div class="input-radio">
-                                            <input class="input-radio__input" type="radio" value="1 ребёнок" v-model="question.num1" id="q11">
+                                            <input class="input-radio__input" type="radio" value="1 ребёнок" v-model="question.num1" id="q11" @change="toggleQuestion(2)">
                                             <label class="input-radio__label" for="q11">1 ребёнок</label>
                                         </div>
                                     </div>
                                     <div class="form-two__line">
                                         <div class="input-radio">
-                                            <input class="input-radio__input" type="radio" value="2 ребёнка" v-model="question.num1" id="q12">
+                                            <input class="input-radio__input" type="radio" value="2 ребёнка" v-model="question.num1" id="q12" @change="toggleQuestion(2)">
                                             <label class="input-radio__label" for="q12">2 ребёнка</label>
                                         </div>
                                     </div>
                                     <div class="form-two__line">
                                         <div class="input-radio">
-                                            <input class="input-radio__input" type="radio" value="3 ребёнка" v-model="question.num1" id="q13">
+                                            <input class="input-radio__input" type="radio" value="3 ребёнка" v-model="question.num1" id="q13" @change="toggleQuestion(2)">
                                             <label class="input-radio__label" for="q13">3 ребёнка</label>
                                         </div>
                                     </div>
                                     <div class="form-two__line">
                                         <div class="input-radio">
-                                            <input class="input-radio__input" type="radio" value="Для взрослого" v-model="question.num1" id="q14">
+                                            <input class="input-radio__input" type="radio" value="Для взрослого" v-model="question.num1" id="q14" @change="toggleQuestion(2)">
                                             <label class="input-radio__label" for="q14">Для взрослого</label>
                                         </div>
                                     </div>
-                                    <div class="form-two__btn">
-                                        <a href="javascript:;" class="btn-second btn-second_str-next" @click="toggleQuestion(2)">Следующий вопрос</a>
-                                    </div>
                                 </div>
 
-                                <div class="form-two" v-if="quizStep == 2">
+                                <div class="form-two" v-show="quizStep == 2">
                                     <div class="form-two__count">
                                         <span class="form-two__count-big">2</span> / <span class="form-two__count-small">5</span>
                                     </div>
@@ -842,35 +839,31 @@
                                     </div>
                                     <div class="form-two__line">
                                         <div class="input-radio">
-                                            <input class="input-radio__input" type="radio" value="1-ярусная" v-model="question.num2" id="q21">
+                                            <input class="input-radio__input" type="radio" value="1-ярусная" v-model="question.num2" id="q21" @change="toggleQuestion(3)">
                                             <label class="input-radio__label" for="q21">1-ярусная</label>
                                         </div>
                                     </div>
                                     <div class="form-two__line">
                                         <div class="input-radio">
-                                            <input class="input-radio__input" type="radio" value="2-ярусная" v-model="question.num2" id="q22">
+                                            <input class="input-radio__input" type="radio" value="2-ярусная" v-model="question.num2" id="q22" @change="toggleQuestion(3)">
                                             <label class="input-radio__label" for="q22">2-ярусная</label>
                                         </div>
                                     </div>
                                     <div class="form-two__line">
                                         <div class="input-radio">
-                                            <input class="input-radio__input" type="radio" value="3-ярусная" v-model="question.num2" id="q23">
+                                            <input class="input-radio__input" type="radio" value="3-ярусная" v-model="question.num2" id="q23" @change="toggleQuestion(3)">
                                             <label class="input-radio__label" for="q23">3-ярусная</label>
                                         </div>
                                     </div>
                                     <div class="form-two__line">
                                         <div class="input-radio">
-                                            <input class="input-radio__input" type="radio" value="Индивидуальный проект" v-model="question.num2" id="q24">
+                                            <input class="input-radio__input" type="radio" value="Индивидуальный проект" v-model="question.num2" id="q24" @change="toggleQuestion(3)">
                                             <label class="input-radio__label" for="q24">Индивидуальный проект</label>
                                         </div>
                                     </div>
-                                    <div class="form-two__btn">
-                                        <a href="javascript:;" class="btn-second btn-second_str-prev" @click="toggleQuestion(1)"></a>
-                                        <a href="javascript:;" class="btn-second btn-second_str-next" @click="toggleQuestion(3)">Следующий вопрос</a>
-                                    </div>
                                 </div>
 
-                                <div class="form-two" v-if="quizStep == 3">
+                                <div class="form-two" v-show="quizStep == 3">
                                     <div class="form-two__count">
                                         <span class="form-two__count-big">3</span> / <span class="form-two__count-small">5</span>
                                     </div>
@@ -879,35 +872,31 @@
                                     </div>
                                     <div class="form-two__line">
                                         <div class="input-radio">
-                                            <input class="input-radio__input" type="radio" value="На этой неделе" v-model="question.num3" id="q31">
+                                            <input class="input-radio__input" type="radio" value="На этой неделе" v-model="question.num3" id="q31" @change="toggleQuestion(4)">
                                             <label class="input-radio__label" for="q31">На этой неделе</label>
                                         </div>
                                     </div>
                                     <div class="form-two__line">
                                         <div class="input-radio">
-                                            <input class="input-radio__input" type="radio" value="В этом месяце" v-model="question.num3" id="q32">
+                                            <input class="input-radio__input" type="radio" value="В этом месяце" v-model="question.num3" id="q32" @change="toggleQuestion(4)">
                                             <label class="input-radio__label" for="q32">В этом месяце</label>
                                         </div>
                                     </div>
                                     <div class="form-two__line">
                                         <div class="input-radio">
-                                            <input class="input-radio__input" type="radio" value="В этом квартале" v-model="question.num3" id="q33">
+                                            <input class="input-radio__input" type="radio" value="В этом квартале" v-model="question.num3" id="q33" @change="toggleQuestion(4)">
                                             <label class="input-radio__label" for="q33">В этом квартале</label>
                                         </div>
                                     </div>
                                     <div class="form-two__line">
                                         <div class="input-radio">
-                                            <input class="input-radio__input" type="radio" value="Другой срок" v-model="question.num3" id="q34">
+                                            <input class="input-radio__input" type="radio" value="Другой срок" v-model="question.num3" id="q34" @change="toggleQuestion(4)">
                                             <label class="input-radio__label" for="q34">Другой срок</label>
                                         </div>
                                     </div>
-                                    <div class="form-two__btn">
-                                        <a href="javascript:;" class="btn-second btn-second_str-prev" @click="toggleQuestion(2)"></a>
-                                        <a href="javascript:;" class="btn-second btn-second_str-next" @click="toggleQuestion(4)">Следующий вопрос</a>
-                                    </div>
                                 </div>
 
-                                <div class="form-two" v-if="quizStep == 4">
+                                <div class="form-two" v-show="quizStep == 4">
                                     <div class="form-two__count">
                                         <span class="form-two__count-big">4</span> / <span class="form-two__count-small">5</span>
                                     </div>
@@ -916,29 +905,25 @@
                                     </div>
                                     <div class="form-two__line form-two__line_three">
                                         <div class="input-radio">
-                                            <input class="input-radio__input" type="radio" value="Бук" v-model="question.num4" id="q41">
+                                            <input class="input-radio__input" type="radio" value="Бук" v-model="question.num4" id="q41" @change="toggleQuestion(5)">
                                             <label class="input-radio__label" for="q41">Бук</label>
                                         </div>
                                     </div>
                                     <div class="form-two__line form-two__line_three">
                                         <div class="input-radio">
-                                            <input class="input-radio__input" type="radio" value="Сосна" v-model="question.num4" id="q42">
+                                            <input class="input-radio__input" type="radio" value="Сосна" v-model="question.num4" id="q42" @change="toggleQuestion(5)">
                                             <label class="input-radio__label" for="q42">Сосна</label>
                                         </div>
                                     </div>
                                     <div class="form-two__line form-two__line_three">
                                         <div class="input-radio">
-                                            <input class="input-radio__input" type="radio" value="Другое" v-model="question.num4" id="q43">
+                                            <input class="input-radio__input" type="radio" value="Другое" v-model="question.num4" id="q43" @change="toggleQuestion(5)">
                                             <label class="input-radio__label" for="q43">Другое</label>
                                         </div>
                                     </div>
-                                    <div class="form-two__btn">
-                                        <a href="javascript:;" class="btn-second btn-second_str-prev" @click="toggleQuestion(3)"></a>
-                                        <a href="javascript:;" class="btn-second btn-second_str-next" @click="toggleQuestion(5)">Следующий вопрос</a>
-                                    </div>
                                 </div>
 
-                                <div class="form-two" v-if="quizStep == 5">
+                                <div class="form-two" v-show="quizStep == 5">
                                     <div class="form-two__count">
                                         <span class="form-two__count-big">5</span> / <span class="form-two__count-small">5</span>
                                     </div>
@@ -947,35 +932,31 @@
                                     </div>
                                     <div class="form-two__line">
                                         <div class="input-radio">
-                                            <input class="input-radio__input" type="radio" value="До 15 тыс.руб." v-model="question.num5" id="q51">
+                                            <input class="input-radio__input" type="radio" value="До 15 тыс.руб." v-model="question.num5" id="q51" @change="toggleQuestion(6)">
                                             <label class="input-radio__label" for="q51">До 15 тыс.руб.</label>
                                         </div>
                                     </div>
                                     <div class="form-two__line">
                                         <div class="input-radio">
-                                            <input class="input-radio__input" type="radio" value="15-25 тыс.руб." v-model="question.num5" id="q52">
+                                            <input class="input-radio__input" type="radio" value="15-25 тыс.руб." v-model="question.num5" id="q52" @change="toggleQuestion(6)">
                                             <label class="input-radio__label" for="q52">15-25 тыс.руб.</label>
                                         </div>
                                     </div>
                                     <div class="form-two__line">
                                         <div class="input-radio">
-                                            <input class="input-radio__input" type="radio" value="25-50 тыс.руб." v-model="question.num5" id="q53">
+                                            <input class="input-radio__input" type="radio" value="25-50 тыс.руб." v-model="question.num5" id="q53" @change="toggleQuestion(6)">
                                             <label class="input-radio__label" for="q53">25-50 тыс.руб.</label>
                                         </div>
                                     </div>
                                     <div class="form-two__line">
                                         <div class="input-radio">
-                                            <input class="input-radio__input" type="radio" value="50-100 тыс.руб." v-model="question.num5" id="q54">
+                                            <input class="input-radio__input" type="radio" value="50-100 тыс.руб." v-model="question.num5" id="q54" @change="toggleQuestion(6)">
                                             <label class="input-radio__label" for="q54">50-100 тыс.руб.</label>
                                         </div>
                                     </div>
-                                    <div class="form-two__btn">
-                                        <a href="javascript:;" class="btn-second btn-second_str-prev" @click="toggleQuestion(4)"></a>
-                                        <a href="javascript:;" class="btn-second btn-second_str-next" @click="toggleQuestion(6)">Следующий вопрос</a>
-                                    </div>
                                 </div>
 
-                                <div class="form-one" v-if="quizStep == 6">
+                                <div class="form-one" v-show="quizStep == 6">
                                     <div class="form-one__line">
                                         <input
                                             class="form-one__input"
