--- a/src/scss/window.scss
+++ b/src/scss/window.scss
@@ -50,7 +50,7 @@
     &__block {
         background-color: var(--peach-light);
         margin: 40px 0 35px;
-        padding: 65px;
+        padding: 65px 65px 25px;
         position: relative;
 
         &:after {
@@ -73,7 +73,7 @@
             max-width: 695px;
         }
         &__block {
-            padding: 30px;
+            padding: 30px 30px 0;
         }
     }
 }
@@ -244,7 +244,7 @@
             background-color: var(--peach);
         }
     }
-    &__input:checked ~ .input-radio__label {
+    &__input:checked + .input-radio__label {
         background-color: var(--peach);
     }
 }
