--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -145,7 +145,7 @@
                 </div>
                 <div class="block-advantages" id="advantages">
                     <div class="container">
-                        <a data-fslightbox="example-youtube-video" href="https://www.youtube.com/watch?v=_sI_Ps7JSEk" class="block-advantages__link">
+                        <a data-fslightbox="example-youtube-video" href="https://www.youtube.com/watch?v=6NQN44SJy2M" class="block-advantages__link">
                             <div class="h2 text-white">
                                 Узнайте <span class="h2-line h2-line_blue"><span class="h2-line__word">все преимущества</span></span><br>
                                 наших кроваток в этом видео
@@ -491,7 +491,7 @@
                                             <div class="team-slider__info">
                                                 <div class="team-slider__name">
                                                     Диана Фидальго Родригес<br>
-                                                    Старый менеджер
+                                                    Старший менеджер
                                                 </div>
                                                 <hr class="team-slider__line">
                                                 <div class="team-slider__text">
@@ -698,7 +698,7 @@
                                     <div class="block-contact__text">
                                         Чтобы выбрать кровать вживую и убедиться в ее качестве лично
                                     </div>
-                                    <div class="block-contact__addr">Москва, Тимерязевская 2/3</div>
+                                    <div class="block-contact__addr">Москва, Тимирязевская 2/3</div>
                                     <a href="//wa.me/79660182318" class="block-contact__phone" target="_blank">+7 (966) 018-23-18</a>
                                     <a href="mailto:amalfimsk@gmail.com" class="block-contact__email">amalfimsk@gmail.com</a>
                                     <div class="block-contact__time">пн-вск с 10.00 до 20.00</div>
