--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -480,7 +480,7 @@
                                                 </div>
                                                 <hr class="team-slider__line">
                                                 <div class="team-slider__text">
-                                                    Работает над тем, чтобы качество наших кроватей постоянно ухудшалось. А вы были в восторге от нашего сервиса
+                                                    Работает над тем, чтобы качество наших кроватей постоянно улучшалась. А вы были в восторге от нашего сервиса
                                                 </div>
                                             </div>
                                         </div>
