--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -1005,6 +1005,8 @@
 
         <script src="//api-maps.yandex.ru/2.1.74/?lang=ru_RU"></script>
         <script async src="//www.instagram.com/embed.js"></script>
+        <link rel="stylesheet" href="https://cdn.envybox.io/widget/cbk.css">
+        <script type="text/javascript" src="https://cdn.envybox.io/widget/cbk.js?wcb_code=c28eba43838a47581d898079283219e8" charset="UTF-8" async></script>
 
         <!-- Yandex.Metrika counter -->
         <script type="text/javascript" >
